<?xml version="1.0"?>
<package format="2">
  <name>multiverse_socket</name>
  <version>0.0.0</version>
  <description>The multiverse_socket package</description>
  <maintainer email="hoanggia@uni-bremen.de">Giang Nguyen</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/Multiverse-Framework/Multiverse</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>multiverse_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>multiverse_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>multiverse_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  
</package>
