[project]
name = "multiverse_pycram_socket"
version = "0.0.1"
authors = [
    { name="Abdelrhman Bassiouny", email="abassiou@uni-bremen.de" },
    { name="Giang Nguyen", email="hoanggia@uni-bremen.de" },
]
description = "The Multiverse PyCRAM Socket"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Multiverse-Framework/Multiverse"
"Bug Tracker" = "https://github.com/Multiverse-Framework/Multiverse/issues"