[project]
name = "multiverse_ros_socket"
version = "0.0.1"
authors = [
  { name="Giang Nguyen", email="hoanggia@uni-bremen.de" },
]
description = "The Multiverse ROS Socket for any ROS version"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"

[project.urls]
"Homepage" = "https://github.com/Multiverse-Framework/Multiverse"
"Bug Tracker" = "https://github.com/Multiverse-Framework/Multiverse/issues"