<?xml version="1.0"?>
<package format="2">
  <name>multiverse_control</name>
  <version>0.0.0</version>
  <description>The multiverse_control package</description>

  <maintainer email="hoanggia@uni-bremen.de">Giang Nguyen</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>roscpp</exec_depend>
</package>